--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<input type="edit" id="output"> </input>
 
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
-	<script type="text/javascript" src="./js/truffle-contract.js"></script>
-	<script type="text/javascript" src="./js/app.js"></script>
+	<script type="text/javascript" src="./src/js/truffle-contract.js"></script>
+	<script type="text/javascript" src="./src/js/app.js"></script>
 	
 </body>
 </html>
