That can found deployed contract via ABI and interact(not so)

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,10 @@
 					<input type="button" id="button" onclick="App.initWeb3()" value="Connect"> </input>
 				</td>
 				<td>
-					<p>Connect to contract: </p> <p style="color: #006400" id="connection"></p>
+					<p>Connect to contract: </p> 
+				</td>
+				<td>
+					<p style="color: #006400" id="connection"></p>
 				</td>
 			</tr>
 			<tr>
@@ -19,8 +22,21 @@
 					<input type="button" id="button" onclick="App.getTotalSuply()" value="Get total suply"> </input>
 				</td>
 				<td>
-					<p>Interact with Contract: </p> <p style="color: #006400" id="interact"></p>
+					<p>Interact with Contract: </p> 
 				</td>
+				<td>
+					<p style="color: #006400" id="interact"></p>
+				</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td>
+					<p>	Total supply:</p>
+				</td>
+				<td>
+					<p id="result"></p>
+				</td>
+
 			</tr>
 		</tbody>
 
