--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,21 @@
 	<div class="title">
 		<h1>My little app</h1>
 	</div>
-	<div class="grid-container">
+	<div class="tab">
+		<button class="tablinks" onclick="openCity(event, 'registration')">Sign Up</button>
+		<button class="tablinks" onclick="openCity(event, 'interactContract')">Interact</button>
+	</div>
+	<div class="tabcontent" id="registation">
+		<div>
+			<button>Sign In</button>
+			<button>Sign Up</button>
+		</div>
+		<div class="singIn">
+			
+		</div>
+		<div class="signUp"></div>
+	</div>
+	<div class="grid-container tabcontent" id="interactContract">
 		<!--status-->
 		<div class="grid-status">
 			<table>
@@ -52,6 +66,7 @@
 	</div>
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
 	<script type="text/javascript" src="/js/truffle-contract.js"></script>
+	<script type="text/javascript" src="/js/tabs.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 	
 </body>
