--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,23 @@
 		<div class="grid-auth">
 			<div class="grid-singIn">
 				<h3>Sing In</h3>
-				<input type="text" placeholder="e-mail">
+				<input type="text" placeholder="e-mail" id="email">
 				<br />
-				<input type="text" placeholder="password">
+				<input type="text" placeholder="password" id="password">
 				<br /> 
-				<button class="center button" onclick="">Sing In</button>
+				<button class="center button" onclick="singIn()">Sing In</button>
 			</div>
 			<div class="grid-signUp">
 				<h3>Sing Up</h3>
-				<input type="text" placeholder="e-mail" id="email">
+				<input type="text" placeholder="e-mail" id="emailUp">
 				<br />
 				<input type="text" placeholder="username" id="username">
 				<br />
-				<input type="text" placeholder="password" id="password">
+				<input type="text" placeholder="password" id="passwordUp">
 				<br />
 				<input type="text" placeholder="again password" id="aPassword">
 				<br />
-				<button class="center button" class="button" onclick="">Sing Up</button>
+				<button class="center button" class="button" onclick="singUp()">Sing Up</button>
 				<span class="success" id="signUpSuccess"></span>
 			</div>
 		</div>
@@ -85,6 +85,7 @@
 	</div>
 	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
 	<script type="text/javascript" src="/js/truffle-contract.js"></script>
+	<script type="text/javascript" src="/js/auth.js"></script>
 	<script type="text/javascript" src="/js/tabs.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
 	
