--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+	<script src="/js/web3.js"></script>
 	<script type="text/javascript" src="/js/truffle-contract.js"></script>
 	<script type="text/javascript" src="/js/auth.js"></script>
 	<script type="text/javascript" src="/js/tabs.js"></script>
