now we can read all transactions of any account
add getTransactionsByAccount and checkBlocks in verification.js

--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,21 @@
 		<div class="grid-auth">
 			<div class="grid-singIn">
 				<h3>Sing In</h3>
-				<input type="text" placeholder="e-mail" id="email">
+				<input type="text" placeholder="e-mail" id="email" value="1">
 				<br />
-				<input type="text" placeholder="password" id="password">
+				<input type="text" placeholder="password" id="password" value="1">
 				<br /> 
 				<button class="center button" onclick="singIn()">Sing In</button>
 			</div>
 			<div class="grid-signUp">
 				<h3>Sing Up</h3>
-				<input type="text" placeholder="e-mail" id="emailUp">
+				<input type="text" placeholder="e-mail" id="emailUp" value="1">
 				<br />
-				<input type="text" placeholder="username" id="username">
+				<input type="text" placeholder="username" id="username" value="1">
 				<br />
-				<input type="text" placeholder="password" id="passwordUp">
+				<input type="text" placeholder="password" id="passwordUp" value="1">
 				<br />
-				<input type="text" placeholder="again password" id="aPassword">
+				<input type="text" placeholder="again password" id="aPassword" value="1">
 				<br />
 				<button class="center button" class="button" onclick="singUp()">Sing Up</button>
 				<span class="success" id="signUpSuccess"></span>
