--- a/src/index.html
+++ b/src/index.html
@@ -91,12 +91,12 @@
 			</div>
 		</div>
 	</div>
-	<script src="/js/web3.js"></script>
+	<script type="text/javascript" src="/js/web3.js"></script>
 	<script type="text/javascript" src="/js/truffle-contract.js"></script>
 	<script type="text/javascript" src="/js/auth.js"></script>
 	<script type="text/javascript" src="/js/tabs.js"></script>
 	<script type="text/javascript" src="/js/verification.js"></script>
 	<script type="text/javascript" src="/js/app.js"></script>
-	
+	<script type="text/javascript" src="/js/mainInteractWithContract.js"></script>
 </body>
 </html>
